tests/ui/traits/next-solver/cycles/coinduction/incompleteness-unstable-result.stderr
error[E0277]: the trait bound `A<X>: Trait<i32, u8, u8>` is not satisfied
  --> $DIR/incompleteness-unstable-result.rs:63:19
   |
LL |     impls_trait::<A<X>, _, _, _>();
   |                   ^^^^ the trait `Trait<i32, u8, u8>` is not implemented for `A<X>`, which is required by `A<X>: Trait<_, _, _>`
   |
note: required for `A<X>` to implement `Trait<i32, u8, u8>`
  --> $DIR/incompleteness-unstable-result.rs:32:50
   |
LL | impl<T: ?Sized, U: ?Sized, V: ?Sized, D: ?Sized> Trait<U, V, D> for A<T>
   |                                                  ^^^^^^^^^^^^^^     ^^^^
...
LL |     A<T>: Trait<U, D, V>,
   |           -------------- unsatisfied trait bound introduced here
   = note: 8 redundant requirements hidden
   = note: required for `A<X>` to implement `Trait<i32, u8, u8>`
note: required by a bound in `impls_trait`
  --> $DIR/incompleteness-unstable-result.rs:51:28
   |
LL | fn impls_trait<T: ?Sized + Trait<U, V, D>, U: ?Sized, V: ?Sized, D: ?Sized>() {}
   |                            ^^^^^^^^^^^^^^ required by this bound in `impls_trait`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     X: IncompleteGuidance<u32, i16>, A<X>: Trait<i32, u8, u8>
   |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
